[build-system]
requires = ["flit_core >=3.2,<4", "numpy>=1.20.1", "scipy", "matplotlib", "sklearn"]
build-backend = "flit_core.buildapi"

[project]
name = "cluster"
authors = [{name = "Carolyn Ku", email = "carolyn.ku@ucsf.edu"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/cjku97/project5"
